# fenko

./: .gitignore  CMakeLists.txt  LICENSE  README  README.md
example/: CMakeLists.txt  README.txt  fenko_example.run  main.cpp
example/lib/fenko/include/: canvas.hpp  data.hpp  types.hpp
example/lib/fenko/include/input/: input_api.hpp
example/lib/fenko/include/sound/: sound.hpp
include/: canvas.hpp  data.hpp  input.hpp  main.hpp  render.hpp
include/graphics/: drawing_api.hpp  render.hpp  sprite.hpp
include/input/: input.hpp  input_api.hpp
include/sound/: sound.hpp
src/: canvas.cpp  data.cpp  input.cpp  main.cpp  render.cpp
src/graphics/: drawing_api.cpp  render.cpp  sprite.cpp
src/input/: input.cpp  input_api.cpp
src/sound/: sound.cpp
